Fix for collection card tag being the wrong colour

--- a/src/components/collection/card/CollectionCard.less
+++ b/src/components/collection/card/CollectionCard.less
@@ -31,7 +31,7 @@
     min-height: 38px;
   }
 
-  .subject-tag {
+  .tag {
     background-color: @shade-1;
   }
 
